@@ -3,6 +3,17 @@
 	* flumotion/component/bouncers/algorithms/icalbouncer.xml:
 	* flumotion/component/bouncers/algorithms/ipbouncer.xml:
 	* flumotion/component/bouncers/algorithms/tokentest.xml:
+	* flumotion/component/bouncers/multibouncer.xml:
+	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
+	* flumotion/component/misc/httpserver/httpserver.xml:
+	The flumotion.component.bouncers.algorithms.BouncerAlgorithm
+	socket was right all along.
+
+2010-06-03  Alvin Delagon  <adelagon@flumotion.com>
+
+	* flumotion/component/bouncers/algorithms/icalbouncer.xml:
+	* flumotion/component/bouncers/algorithms/ipbouncer.xml:
+	* flumotion/component/bouncers/algorithms/tokentest.xml:
 	* flumotion/component/bouncers/plug.xml:
 	Fixed incorrect socket locations.
 
